--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ section {
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url(..img/background.jpg); /* Corrected path */
+    background-image: url(background.jpg); /* Corrected path */
     background-size: cover;
     background-position: right center; /* Updated position to right center */
     display: flex;
